# sort

./: Makefile.am  Makefile.in  README.md  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: bubbleSort.c  cocktailSort.c  create_rand.c  create_rand.h  insertionSort.c  insertionSortDichotomy.c  selectionSort.c
